--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -5,13 +5,13 @@
 <br><br>
 
 <table class="table table-boldered">
-  <% @job.each do |job| %>
+  <% @jobs.each do |job| %>
   <tr>
     <td>
       <%= link_to(job.title, admin_job_path(job)) %>
     </td>
     <td>
-      <%= link_to("Edit", edit_admin_job_path(job)) %>
+      <%= link_to("Edit", edit_admin_job_path(job)) %> |
       <%= link_to("Destroy", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure?"}) %>
     </td>
     <td>
